@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-30T08:22:36Z",
-  "count_outdated" : 573,
-  "uniques_outdated" : 271,
+  "timestamp" : "2023-10-30T16:23:19Z",
+  "count_outdated" : 575,
+  "uniques_outdated" : 272,
   "count" : 609,
   "uniques" : 287,
   "clones" : [
-    {
-      "timestamp": "2023-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-17T00:00:00Z",
       "count": 3,
