@@ -1,3 +1,12 @@
+2023-10-30T16:23:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6695739690 # 912
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
+* notice: last 14d: unq all: 2 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 271 573 / 287 609
+* notice: next accum: outdated-unq outdated-all / unq all: 272 575 / 287 609
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-16] / []
+
 2023-10-30T08:22:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6690095565 # 911
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
